--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,13 +14,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background:  #1E2E46;
     --foreground: #ededed;
   }
 }
 
 body {
-  background: var(--background);
+  background: linear-gradient(to  right, #020202, #243B55);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
